# replication-core

./: .gitignore  README.md  pyproject.toml
papers/01_vilnis_2015_gaussian_embeddings/: todo.md
papers/01_vilnis_2015_gaussian_embeddings/env/: create_venv.sh  preflight.sh
papers/01_vilnis_2015_gaussian_embeddings/src/: energies.py
papers/p01_vilnis_2015/: README.md  claims.md  notes.md  paper_metadata.md  requirements.lock.txt  todo.md
papers/p01_vilnis_2015/docs/: vilnis_2015_gaussian_embeddings.md
papers/p01_vilnis_2015/env/: create_venv.sh  preflight.sh
papers/p01_vilnis_2015/experiments/: e01_toy_training.py
papers/p01_vilnis_2015/src/: corpus.py  energies.py  gaussian_embedding.py  losses.py
papers/p01_vilnis_2015/tests/: test_corpus.py  test_energies.py  test_gaussian_embedding.py  test_losses.py
replication_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
